task_2/homework/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-epam-prod-canary
  labels:
    app   : nginx-epam
    owners: ValentinKozlov
    env   : prod
    state : canary
spec:
  type: ClusterIP
  selector:
    state: canary
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 80
