task_2/homework/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-epam-prod-main
  labels:
    app   : nginx-epam
    owners: ValentinKozlov
    env   : prod
    state : main
spec:
  type: ClusterIP
  selector:
    state: main
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 80
